--- a/research.ipynb
+++ b/research.ipynb
@@ -1,158 +1,6 @@
 {
     "cells": [
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {
-                "vscode": {
-                    "languageId": "plaintext"
-                }
-            },
-            "outputs": [],
-            "source": [
-                "# notebooks/umi_analysis.py\n",
-                "# ================================================================\n",
-                "#  UMI – Post-Run Analysis\n",
-                "# ================================================================\n",
-                "#\n",
-                "#  Produces:\n",
-                "#    • hyper-param table\n",
-                "#    • parameter inventory (top tensors, totals)\n",
-                "#    • Optuna trial curve (if any)\n",
-                "#    • training-loss curves\n",
-                "#    • prediction-vs-truth plot for user-selected ticker\n",
-                "#    • cumulative NAV curve from equity_curve.csv\n",
-                "# ================================================================\n",
-                "\n",
-                "from pathlib import Path\n",
-                "import json\n",
-                "import gzip\n",
-                "import yaml\n",
-                "\n",
-                "import torch\n",
-                "import pandas as pd\n",
-                "import matplotlib.pyplot as plt\n",
-                "\n",
-                "plt.style.use(\"ggplot\")           # comment out if you dislike ggplot colours\n",
-                "pd.set_option(\"display.max_rows\", 50)\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 0. Locate latest run folder\n",
-                "# ---------------------------------------------------------------------------\n",
-                "cfg = yaml.safe_load(Path(\"configs/umi.yaml\").read_text())\n",
-                "run_root = Path(cfg[\"model_dir\"]).expanduser()\n",
-                "best_ckpts = sorted(run_root.rglob(\"best.pt\"), key=lambda p: p.stat().st_mtime)\n",
-                "if not best_ckpts:\n",
-                "    raise FileNotFoundError(f\"No best.pt under {run_root}\")\n",
-                "best_pt   = best_ckpts[-1]\n",
-                "run_dir   = best_pt.parent\n",
-                "print(f\"🔍  Analysing run folder:  {run_dir.relative_to(Path('.').resolve())}\")\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 1. Hyper-parameters\n",
-                "# ---------------------------------------------------------------------------\n",
-                "hp_file = run_dir / \"hparams.json\"\n",
-                "with hp_file.open() as fp:\n",
-                "    hp = json.load(fp)\n",
-                "hp_df = pd.DataFrame(hp.items(), columns=[\"param\", \"value\"])\n",
-                "print(\"\\n=== Saved hyper-parameters ===\")\n",
-                "display(hp_df)\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 2. Parameter inventory\n",
-                "# ---------------------------------------------------------------------------\n",
-                "inv_csv = run_dir / \"param_inventory.csv\"\n",
-                "param_df = pd.read_csv(inv_csv)\n",
-                "total_params = int(param_df[\"numel\"].sum())\n",
-                "total_bytes  = int(param_df[\"bytes\"].sum())\n",
-                "\n",
-                "print(f\"\\nTotal learnable parameters : {total_params:,}\")\n",
-                "print(f\"≈ Model size (fp32)        : {total_bytes/1024/1024:.1f} MB\")\n",
-                "\n",
-                "print(\"\\n=== Largest tensors (top-20) ===\")\n",
-                "display(param_df.sort_values(\"numel\", ascending=False).head(20))\n",
-                "\n",
-                "plt.figure(figsize=(10, 4))\n",
-                "top = param_df.sort_values(\"numel\", ascending=False).head(10)\n",
-                "plt.bar(top[\"tensor\"], top[\"numel\"])\n",
-                "plt.xticks(rotation=45, ha=\"right\")\n",
-                "plt.ylabel(\"# parameters\")\n",
-                "plt.title(\"Top-10 tensors by parameter count\")\n",
-                "plt.tight_layout()\n",
-                "plt.show()\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 3. Optuna history (if any)\n",
-                "# ---------------------------------------------------------------------------\n",
-                "trial_csv = run_dir / \"hp_trials.csv\"\n",
-                "if trial_csv.exists():\n",
-                "    trials = pd.read_csv(trial_csv)\n",
-                "    trials.plot(x=\"trial\", y=\"loss_pred\", marker=\"o\", figsize=(6, 3),\n",
-                "                title=\"Optuna trial losses\")\n",
-                "    plt.ylabel(\"validation loss\")\n",
-                "    plt.show()\n",
-                "else:\n",
-                "    print(\"\\n(no hp_trials.csv found – tuning was disabled)\")\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 4. Training-loss curves\n",
-                "# ---------------------------------------------------------------------------\n",
-                "loss_csv = run_dir / \"train_losses.csv\"\n",
-                "if loss_csv.exists():\n",
-                "    loss_df = pd.read_csv(loss_csv)\n",
-                "    cols = [c for c in [\"loss_pred\", \"loss_stock\", \"loss_market\"] if c in loss_df.columns]\n",
-                "    loss_df.set_index(\"epoch\")[cols].plot(figsize=(8, 4))\n",
-                "    plt.title(\"Training losses\")\n",
-                "    plt.ylabel(\"loss\")\n",
-                "    plt.show()\n",
-                "else:\n",
-                "    print(\"\\n(no train_losses.csv found)\")\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 5. Prediction vs Truth\n",
-                "# ---------------------------------------------------------------------------\n",
-                "pred_csv  = run_dir / \"bt_pred_close.csv\"\n",
-                "truth_csv = run_dir / \"bt_truth_close.csv\"\n",
-                "\n",
-                "if pred_csv.exists() and truth_csv.exists():\n",
-                "    pred  = pd.read_csv(pred_csv,  index_col=0, parse_dates=True)\n",
-                "    truth = pd.read_csv(truth_csv, index_col=0, parse_dates=True)\n",
-                "\n",
-                "    print(\"\\nAvailable tickers :\", list(pred.columns))\n",
-                "    ticker = input(\"Choose a ticker to plot ➜ \").strip().upper()\n",
-                "    if ticker not in pred.columns:\n",
-                "        print(\"Ticker not found – falling back to first column.\")\n",
-                "        ticker = pred.columns[0]\n",
-                "\n",
-                "    ax = truth[ticker].plot(label=\"real close\", figsize=(9, 4))\n",
-                "    pred[ticker].plot(ax=ax, label=\"predicted close\")\n",
-                "    ax.set_title(f\"{ticker} – 1-bar-ahead close forecast\")\n",
-                "    ax.legend()\n",
-                "    plt.show()\n",
-                "\n",
-                "    mse = ((pred - truth).pow(2)).mean().mean()\n",
-                "    ic  = pred.corrwith(truth, axis=1).mean()\n",
-                "    print(f\"MSE across back-test : {mse:.6f}\")\n",
-                "    print(f\"Average IC           : {ic:.4f}\")\n",
-                "else:\n",
-                "    print(\"\\n(bt_pred_close.csv / bt_truth_close.csv missing)\")\n",
-                "\n",
-                "# ---------------------------------------------------------------------------\n",
-                "# 6. Cumulative NAV curve\n",
-                "# ---------------------------------------------------------------------------\n",
-                "equity_csv = run_dir / \"equity_curve.csv\"\n",
-                "if equity_csv.exists():\n",
-                "    nav = pd.read_csv(equity_csv, parse_dates=[\"ts\"]).set_index(\"ts\")[\"equity\"]\n",
-                "    nav.plot(figsize=(9, 4), title=\"Cumulative Wealth (Nautilus back-test)\")\n",
-                "    plt.ylabel(\"Equity\")\n",
-                "    plt.show()\n",
-                "else:\n",
-                "    print(\"\\n(equity_curve.csv not found – back-test may not be finished)\")\n",
-                "\n",
-                "print(\"\\n🎉  Analysis complete.\")\n"
-            ]
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -166,11 +14,7 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {
-                "vscode": {
-                    "languageId": "plaintext"
-                }
-            },
+            "metadata": {},
             "outputs": [],
             "source": [
                 "\"\"\"\n",
@@ -203,10 +47,11 @@
                 "# Import model and utilities\n",
                 "from models.UMIModel.UMIModel import UMIModel\n",
                 "from algos.engine.data_loader import CsvBarLoader\n",
+                "from models.utils import freq2pdoffset\n",
                 "\n",
                 "# %% Load configuration\n",
                 "config_path = Path(\"configs/config.yaml\")\n",
-                "cfg = yaml.safe_load(config_path.read_text())\n",
+                "cfg = yaml.safe_load(config_path.read_text(encoding=\"utf-8\"))\n",
                 "\n",
                 "print(f\"Configuration loaded from: {config_path}\")\n",
                 "print(f\"Model: {cfg['model_name']}\")\n",
@@ -232,8 +77,10 @@
                 "\n",
                 "# Prepare sample data windows\n",
                 "backtest_start = pd.Timestamp(cfg[\"backtest_start\"], tz=\"UTC\")\n",
-                "train_end = pd.Timestamp(cfg[\"train_end\"], tz=\"UTC\") \n",
-                "valid_end = pd.Timestamp(cfg[\"valid_end\"], tz=\"UTC\")\n",
+                "train_offset = freq2pdoffset(cfg[\"train_offset\"])\n",
+                "valid_offset = freq2pdoffset(cfg[\"valid_offset\"])\n",
+                "train_end = backtest_start + train_offset\n",
+                "valid_end = train_end + valid_offset\n",
                 "\n",
                 "# Create data dictionary for selected stocks\n",
                 "sample_data = {}\n",
@@ -672,13 +519,21 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
         "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
             "name": "python",
-            "version": "3.11.11"
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.12.1"
         }
     },
     "nbformat": 4,
