--- a/research.ipynb
+++ b/research.ipynb
@@ -15,7 +15,51 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Configuration loaded from: configs\\config.yaml\n",
+                        "Model: UMIModel\n",
+                        "Data directory: data/\n",
+                        "Frequency: 1B\n",
+                        "Retrain offset: 30B\n",
+                        "Prediction length: 1 bars\n",
+                        "MLflow tracking URI: file:./mlruns\n",
+                        "Active experiment: Model_Research\n",
+                        "Test universe: ['AAPL', 'AMZN', 'GOOGL']\n",
+                        "  AAPL: 127 bars\n",
+                        "  AMZN: 127 bars\n",
+                        "  GOOGL: 127 bars\n",
+                        "\n",
+                        "=== Model Initialization ===\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\utils.py:137: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+                        "  return to_offset(offset_alias)\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Training model from scratch...\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:382: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.num_heads is odd\n",
+                        "  warnings.warn(\n"
+                    ]
+                }
+            ],
             "source": [
                 "\"\"\"\n",
                 "research_mlflow.ipynb - Model Training & MLflow Visualization\n",
@@ -80,7 +124,7 @@
                 "train_offset = freq2pdoffset(cfg[\"train_offset\"])\n",
                 "valid_offset = freq2pdoffset(cfg[\"valid_offset\"])\n",
                 "train_end = backtest_start + train_offset\n",
-                "valid_end = train_end + valid_offset\n",
+                "valid_end = train_end\n",
                 "\n",
                 "# Create data dictionary for selected stocks\n",
                 "sample_data = {}\n",
@@ -92,6 +136,7 @@
                 "        sample_data[ticker] = df[mask]\n",
                 "        print(f\"  {ticker}: {len(sample_data[ticker])} bars\")\n",
                 "\n",
+                "assert len(sample_data) > 0 \n",
                 "# %% Initialize model with MLflow tracking\n",
                 "print(\"\\n=== Model Initialization ===\")\n",
                 "\n",
