--- a/research.ipynb
+++ b/research.ipynb
@@ -13,7 +13,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -23,7 +23,7 @@
                         "Configuration loaded from: configs\\config.yaml\n",
                         "Model: UMIModel\n",
                         "Data directory: data/\n",
-                        "Frequency: 1B\n",
+                        "Frequency: 1D\n",
                         "Retrain offset: 30B\n",
                         "Prediction length: 1 bars\n",
                         "MLflow tracking URI: file:./mlruns\n",
@@ -33,21 +33,8 @@
                         "  AMZN: 127 bars\n",
                         "  GOOGL: 127 bars\n",
                         "\n",
-                        "=== Model Initialization ===\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\utils.py:137: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
-                        "  return to_offset(offset_alias)\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
+                        "=== Model Initialization ===\n",
+                        "Using default hyperparameters...\n",
                         "Training model from scratch...\n"
                     ]
                 },
@@ -56,7 +43,10 @@
                     "output_type": "stream",
                     "text": [
                         "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:382: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.num_heads is odd\n",
-                        "  warnings.warn(\n"
+                        "  warnings.warn(\n",
+                        "\n",
+                        "KeyboardInterrupt\n",
+                        "\n"
                     ]
                 }
             ],
@@ -73,6 +63,7 @@
                 "# This notebook tests the model's core functions with sample data and visualizes training metrics\n",
                 "\n",
                 "# %% Import dependencies\n",
+                "import calendar\n",
                 "import sys\n",
                 "import os\n",
                 "sys.path.append(os.path.abspath('..'))\n",
@@ -91,7 +82,7 @@
                 "# Import model and utilities\n",
                 "from models.UMIModel.UMIModel import UMIModel\n",
                 "from algos.engine.data_loader import CsvBarLoader\n",
-                "from models.utils import freq2pdoffset\n",
+                "from models.utils import freq2pdoffset, freq2pdoffset\n",
                 "\n",
                 "# %% Load configuration\n",
                 "config_path = Path(\"configs/config.yaml\")\n",
@@ -132,7 +123,7 @@
                 "    if ticker in loader._frames:\n",
                 "        df = loader._frames[ticker]\n",
                 "        # Get data up to validation end for initial training\n",
-                "        mask = (df.index >= backtest_start) & (df.index <= valid_end)\n",
+                "        mask = (df.index > backtest_start) & (df.index < valid_end)\n",
                 "        sample_data[ticker] = df[mask]\n",
                 "        print(f\"  {ticker}: {len(sample_data[ticker])} bars\")\n",
                 "\n",
@@ -149,8 +140,8 @@
                 "        \"feature_dim\": cfg[\"feature_dim\"],\n",
                 "        \"window_len\": cfg[\"window_len\"],\n",
                 "        \"pred_len\": cfg[\"pred_len\"],\n",
-                "        \"train_offset\": pd.DateOffset(months=6),\n",
-                "        \"pred_offset\": pd.DateOffset(days=1),\n",
+                "        \"train_offset\": freq2pdoffset(cfg[\"train_offset\"]),\n",
+                "        \"pred_offset\": freq2pdoffset(cfg[\"freq\"])*int(cfg[\"pred_len\"]),\n",
                 "        \"train_end\": train_end,\n",
                 "        \"valid_end\": valid_end,\n",
                 "        \"n_epochs\": 10,  # Reduced for testing\n",
@@ -164,12 +155,38 @@
                 "        \"save_backups\": False,\n",
                 "        \"data_dir\": Path(cfg[\"data_dir\"]),\n",
                 "        \"model_dir\": Path(\"logs/research_model\"),\n",
+                "        \"calendar\": cfg[\"calendar\"],   #Equity market calendar\n",
                 "    }\n",
                 "    \n",
-                "    # Get hyperparameters\n",
-                "    hparams = cfg[\"hparams\"]\n",
-                "    hp_values = {k: v[\"default\"] if isinstance(v, dict) else v for k, v in hparams.items()}\n",
+                "    # Use HP tuner like strategy does\n",
+                "    from algos.engine.hparam_tuner import OptunaHparamsTuner, split_hparam_cfg\n",
                 "    \n",
+                "    defaults, search_space = split_hparam_cfg(cfg[\"hparams\"])\n",
+                "    hp_values = {}\n",
+                "    \n",
+                "    # Test hyperparameter tuning workflow\n",
+                "    if cfg[\"training\"].get(\"tune_hparams\", False):\n",
+                "        print(\"Testing HPO workflow...\")\n",
+                "        tuner = OptunaHparamsTuner(\n",
+                "            model_name=cfg[\"model_name\"],\n",
+                "            ModelClass=UMIModel,\n",
+                "            start=backtest_start,\n",
+                "            end=valid_end,\n",
+                "            logs_dir=Path(\"logs/research_hpo\"),\n",
+                "            data=sample_data,\n",
+                "            model_params=model_params,\n",
+                "            defaults=defaults,\n",
+                "            search_space=search_space,\n",
+                "            n_trials=4,  # Just 2 trials for testing\n",
+                "            log=None,\n",
+                "        )\n",
+                "        best = tuner.optimize()\n",
+                "        hp_values = {**defaults, **best[\"hparams\"]}\n",
+                "        print(f\"HPO complete. Best hparams: {hp_values}\")\n",
+                "    else:\n",
+                "        print(\"Using default hyperparameters...\")\n",
+                "        hp_values = defaults\n",
+                "\n",
                 "    # Create model instance\n",
                 "    model = UMIModel(**model_params, **hp_values)\n",
                 "    \n",
