--- a/research.ipynb
+++ b/research.ipynb
@@ -13,7 +13,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -123,7 +123,7 @@
                 "    if ticker in loader._frames:\n",
                 "        df = loader._frames[ticker]\n",
                 "        # Get data up to validation end for initial training\n",
-                "        mask = (df.index > backtest_start) & (df.index < valid_end)\n",
+                "        mask = (df.index >= backtest_start) & (df.index <= valid_end)\n",
                 "        sample_data[ticker] = df[mask]\n",
                 "        print(f\"  {ticker}: {len(sample_data[ticker])} bars\")\n",
                 "\n",
