--- a/research.ipynb
+++ b/research.ipynb
@@ -13,9 +13,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "2025/08/20 15:02:13 INFO mlflow.tracking.fluent: Experiment with name 'Model_Research' does not exist. Creating a new experiment.\n"
+                    ]
+                },
                 {
                     "name": "stdout",
                     "output_type": "stream",
@@ -29,24 +36,45 @@
                         "MLflow tracking URI: file:./mlruns\n",
                         "Active experiment: Model_Research\n",
                         "Test universe: ['AAPL', 'AMZN', 'GOOGL']\n",
-                        "  AAPL: 127 bars\n",
-                        "  AMZN: 127 bars\n",
-                        "  GOOGL: 127 bars\n",
+                        "  AAPL: 128 bars\n",
+                        "  AMZN: 128 bars\n",
+                        "  GOOGL: 128 bars\n",
                         "\n",
-                        "=== Model Initialization ===\n",
-                        "Using default hyperparameters...\n",
-                        "Training model from scratch...\n"
+                        "=== Model Initialization ===\n"
                     ]
                 },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
+                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+                        "  from .autonotebook import tqdm as notebook_tqdm\n",
                         "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:382: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.num_heads is odd\n",
-                        "  warnings.warn(\n",
-                        "\n",
-                        "KeyboardInterrupt\n",
-                        "\n"
+                        "  warnings.warn(\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Using default hyperparameters...\n",
+                        "Training model from scratch...\n"
+                    ]
+                },
+                {
+                    "ename": "TypeError",
+                    "evalue": "all() received an invalid combination of arguments - got (axis=int, out=NoneType, ), but expected one of:\n * ()\n * (tuple of ints dim = None, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n * (int dim, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n * (name dim, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+                        "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 147\u001b[39m\n\u001b[32m    145\u001b[39m \u001b[38;5;66;03m# Initialize model (trains from scratch)\u001b[39;00m\n\u001b[32m    146\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTraining model from scratch...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m147\u001b[39m best_val_loss = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43minitialize\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    148\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInitial training complete. Best validation loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_val_loss\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.6f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    150\u001b[39m \u001b[38;5;66;03m# Log model info\u001b[39;00m\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\UMIModel\\UMIModel.py:161\u001b[39m, in \u001b[36mUMIModel.initialize\u001b[39m\u001b[34m(self, data, **kwargs)\u001b[39m\n\u001b[32m    159\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.logger:\n\u001b[32m    160\u001b[39m     \u001b[38;5;28mself\u001b[39m.logger.info(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[initialize] Training for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.n_epochs\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m epochs...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m161\u001b[39m best_val = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mn_epochs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactive_mask\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    163\u001b[39m \u001b[38;5;66;03m# Save initial state\u001b[39;00m\n\u001b[32m    164\u001b[39m torch.save(\u001b[38;5;28mself\u001b[39m.state_dict(), \u001b[38;5;28mself\u001b[39m.model_dir / \u001b[33m\"\u001b[39m\u001b[33minit.pt\u001b[39m\u001b[33m\"\u001b[39m)\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\UMIModel\\UMIModel.py:494\u001b[39m, in \u001b[36mUMIModel._train\u001b[39m\u001b[34m(self, data, n_epochs, active_mask)\u001b[39m\n\u001b[32m    491\u001b[39m timestamps = market_calendars.date_range(days_range, frequency=\u001b[38;5;28mself\u001b[39m.freq).normalize()\n\u001b[32m    493\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) > \u001b[32m0\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m494\u001b[39m (train_tensor, train_mask) , (valid_tensor, valid_mask) = \u001b[43mbuild_input_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimestamps\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimestamps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeature_dim\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit_valid_timestamp\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtrain_end\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    496\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m torch.equal(valid_mask, active_mask) , \u001b[33m\"\u001b[39m\u001b[33mActive mask mismatch during training\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    497\u001b[39m \u001b[38;5;66;03m# Build training dataset\u001b[39;00m\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\utils.py:255\u001b[39m, in \u001b[36mbuild_input_tensor\u001b[39m\u001b[34m(data, timestamps, feature_dim, split_valid_timestamp)\u001b[39m\n\u001b[32m    252\u001b[39m \u001b[38;5;66;03m# Instrument is active if it has ALL non-NaN value at last timestamp\u001b[39;00m\n\u001b[32m    253\u001b[39m \u001b[38;5;66;03m# train tensor and mask\u001b[39;00m\n\u001b[32m    254\u001b[39m train_tensor = torch.from_numpy(tensor_array[train_idx])  \u001b[38;5;66;03m# (T_train, I, F)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m255\u001b[39m train_mask = torch.from_numpy(~\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mall\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43misnan\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_tensor\u001b[49m\u001b[43m[\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m)  \u001b[38;5;66;03m# (I,)\u001b[39;00m\n\u001b[32m    257\u001b[39m \u001b[38;5;66;03m# valid tensor and mask\u001b[39;00m\n\u001b[32m    258\u001b[39m valid_tensor = torch.tensor(\u001b[32m0\u001b[39m)\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:2675\u001b[39m, in \u001b[36mall\u001b[39m\u001b[34m(a, axis, out, keepdims, where)\u001b[39m\n\u001b[32m   2589\u001b[39m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_all_dispatcher)\n\u001b[32m   2590\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mall\u001b[39m(a, axis=\u001b[38;5;28;01mNone\u001b[39;00m, out=\u001b[38;5;28;01mNone\u001b[39;00m, keepdims=np._NoValue, *, where=np._NoValue):\n\u001b[32m   2591\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   2592\u001b[39m \u001b[33;03m    Test whether all array elements along a given axis evaluate to True.\u001b[39;00m\n\u001b[32m   2593\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   2673\u001b[39m \n\u001b[32m   2674\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2675\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapreduction_any_all\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlogical_and\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mall\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2676\u001b[39m \u001b[43m                                  \u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkeepdims\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:100\u001b[39m, in \u001b[36m_wrapreduction_any_all\u001b[39m\u001b[34m(obj, ufunc, method, axis, out, **kwargs)\u001b[39m\n\u001b[32m     98\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     99\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m100\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mreduction\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mpasskwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    102\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m ufunc.reduce(obj, axis, \u001b[38;5;28mbool\u001b[39m, out, **passkwargs)\n",
+                        "\u001b[31mTypeError\u001b[39m: all() received an invalid combination of arguments - got (axis=int, out=NoneType, ), but expected one of:\n * ()\n * (tuple of ints dim = None, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n * (int dim, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n * (name dim, bool keepdim = False)\n      didn't match because some of the keywords were incorrect: axis, out\n"
                     ]
                 }
             ],
@@ -78,6 +106,7 @@
                 "import matplotlib.pyplot as plt\n",
                 "from datetime import datetime, timedelta\n",
                 "from pandas.tseries.frequencies import to_offset\n",
+                "import pandas_market_calendars as market_calendars\n",
                 "\n",
                 "# Import model and utilities\n",
                 "from models.UMIModel.UMIModel import UMIModel\n",
@@ -104,7 +133,8 @@
                 "\n",
                 "# %% Load sample data\n",
                 "# Initialize data loader\n",
-                "loader = CsvBarLoader(cfg=cfg, venue_name=\"SIM\")\n",
+                "cols = ['Open', 'High', 'Low', 'Adj Close', 'Volume']\n",
+                "loader = CsvBarLoader(cfg=cfg, columns_to_load=cols)\n",
                 "\n",
                 "# Select a subset of stocks for testing\n",
                 "test_universe = loader.universe[:10]  # Use first 10 stocks for testing\n",
@@ -119,12 +149,15 @@
                 "\n",
                 "# Create data dictionary for selected stocks\n",
                 "sample_data = {}\n",
+                "calendar = market_calendars.get_calendar(cfg[\"calendar\"])\n",
+                "days_range = calendar.schedule(start_date=backtest_start, end_date=valid_end)\n",
+                "timestamps = market_calendars.date_range(days_range, frequency=cfg[\"freq\"]).normalize()\n",
                 "for ticker in test_universe:\n",
                 "    if ticker in loader._frames:\n",
                 "        df = loader._frames[ticker]\n",
                 "        # Get data up to validation end for initial training\n",
-                "        mask = (df.index >= backtest_start) & (df.index <= valid_end)\n",
-                "        sample_data[ticker] = df[mask]\n",
+                "        df.index = df.index.normalize()\n",
+                "        sample_data[ticker] = df.reindex(timestamps).dropna()\n",
                 "        print(f\"  {ticker}: {len(sample_data[ticker])} bars\")\n",
                 "\n",
                 "assert len(sample_data) > 0 \n",
