--- a/research.ipynb
+++ b/research.ipynb
@@ -33,23 +33,7 @@
                         "  AMZN: 128 bars\n",
                         "  GOOGL: 128 bars\n",
                         "\n",
-                        "=== Model Initialization ===\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-                        "  from .autonotebook import tqdm as notebook_tqdm\n",
-                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:382: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.num_heads is odd\n",
-                        "  warnings.warn(\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
+                        "=== Model Initialization ===\n",
                         "Using default hyperparameters...\n",
                         "Training model from scratch...\n"
                     ]
@@ -58,8 +42,13 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "2025/08/21 01:28:39 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
-                        "2025/08/21 01:29:05 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+                        "  from .autonotebook import tqdm as notebook_tqdm\n",
+                        "c:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\torch\\nn\\modules\\transformer.py:392: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.num_heads is odd\n",
+                        "  warnings.warn(\n",
+                        "2025/08/27 14:54:55 WARNING mlflow.models.model: `artifact_path` is deprecated. Please use `name` instead.\n",
+                        "2025/08/27 14:56:59 WARNING mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: C:\\Users\\gianc\\AppData\\Local\\Temp\\tmpogwclfq5\\model\\data, flavor: pytorch). Fall back to return ['torch==2.8.0', 'cloudpickle==3.1.1']. Set logging level to DEBUG to see the full traceback. \n",
+                        "2025/08/27 14:56:59 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
                     ]
                 },
                 {
@@ -68,20 +57,27 @@
                     "text": [
                         "Initial training complete. Best validation loss: inf\n",
                         "\n",
-                        "=== Testing Prediction ===\n"
+                        "=== Testing Walk-Forward Updates ===\n",
+                        "This simulates the model's behavior during live trading:\n",
+                        "1. Make predictions at each time step\n",
+                        "2. Update model with warm-start training\n",
+                        "3. Continue until retrain_offset is reached\n",
+                        "4. Then re-initialize model from scratch\n",
+                        "------------------------------------------------------------\n",
+                        "Update frequency: <Day>\n",
+                        "Retrain offset: <30 * BusinessDays>\n"
                     ]
                 },
                 {
                     "ename": "AssertionError",
-                    "evalue": "tiker dataframe size mismatch",
+                    "evalue": "Prediction dataset should contain exactly one window, found instead 0",
                     "output_type": "error",
                     "traceback": [
                         "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
                         "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 161\u001b[39m\n\u001b[32m    158\u001b[39m current_time = valid_end\n\u001b[32m    159\u001b[39m active_mask = torch.ones(\u001b[38;5;28mlen\u001b[39m(test_universe), dtype=torch.bool)\n\u001b[32m--> \u001b[39m\u001b[32m161\u001b[39m predictions = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurrent_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactive_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    163\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPredictions at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrent_time\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    164\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m ticker, pred \u001b[38;5;129;01min\u001b[39;00m predictions.items():\n",
-                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\UMIModel\\UMIModel.py:270\u001b[39m, in \u001b[36mUMIModel.predict\u001b[39m\u001b[34m(self, data, current_time, active_mask)\u001b[39m\n\u001b[32m    268\u001b[39m days_range = \u001b[38;5;28mself\u001b[39m.market_calendar.schedule(start_date=current_time, end_date=current_time + \u001b[38;5;28mself\u001b[39m.pred_offset)\n\u001b[32m    269\u001b[39m timestamps = market_calendars.date_range(days_range, frequency=\u001b[38;5;28mself\u001b[39m.freq).normalize()\n\u001b[32m--> \u001b[39m\u001b[32m270\u001b[39m data_tensor, data_mask = \u001b[43mbuild_pred_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimestamps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfeature_dim\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mF\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_device\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    272\u001b[39m \u001b[38;5;66;03m# assertion on the universe size\u001b[39;00m\n\u001b[32m    273\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m torch.equal(data_mask, active_mask), \u001b[33m\"\u001b[39m\u001b[33mActive mask mismatch during prediction\u001b[39m\u001b[33m\"\u001b[39m\n",
-                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\utils.py:311\u001b[39m, in \u001b[36mbuild_pred_tensor\u001b[39m\u001b[34m(data, timestamps, feature_dim, device)\u001b[39m\n\u001b[32m    308\u001b[39m \u001b[38;5;66;03m# Fill in data for each instrument\u001b[39;00m\n\u001b[32m    309\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, ticker \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(universe):\n\u001b[32m    310\u001b[39m     \u001b[38;5;66;03m# Reindex to common timestamps (automatically fills NaN for missing)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m311\u001b[39m     \u001b[38;5;28;01massert\u001b[39;00m data[ticker].shape == (T,F), \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mtiker dataframe size mismatch\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    312\u001b[39m     \u001b[38;5;66;03m# Copy values into pre-allocated array\u001b[39;00m\n\u001b[32m    313\u001b[39m     tensor_array[:, i, :] = torch.tensor(data[ticker].values, dtype=torch.float32, device=device)\n",
-                        "\u001b[31mAssertionError\u001b[39m: tiker dataframe size mismatch"
+                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 226\u001b[39m\n\u001b[32m    222\u001b[39m         current_data[ticker] = df[mask]\n\u001b[32m    224\u001b[39m \u001b[38;5;66;03m# Make prediction\u001b[39;00m\n\u001b[32m    225\u001b[39m \u001b[38;5;66;03m# debugger\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m226\u001b[39m predictions = \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurrent_time\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mactive_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    228\u001b[39m \u001b[38;5;66;03m# Store predictions\u001b[39;00m\n\u001b[32m    229\u001b[39m pred_record = {\u001b[33m\"\u001b[39m\u001b[33mtimestamp\u001b[39m\u001b[33m\"\u001b[39m: current_time, \u001b[33m\"\u001b[39m\u001b[33mupdate_num\u001b[39m\u001b[33m\"\u001b[39m: update_count}\n",
+                        "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\models\\UMIModel\\UMIModel.py:280\u001b[39m, in \u001b[36mUMIModel.predict\u001b[39m\u001b[34m(self, data, current_time, active_mask)\u001b[39m\n\u001b[32m    277\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m torch.equal(data_mask, active_mask), \u001b[33m\"\u001b[39m\u001b[33mActive mask mismatch during prediction\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    279\u001b[39m dataset = SlidingWindowDataset(data_tensor, \u001b[38;5;28mself\u001b[39m.L, \u001b[38;5;28mself\u001b[39m.pred_len, \u001b[38;5;28mself\u001b[39m.close_idx, with_target = \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m280\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(dataset) == \u001b[32m1\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPrediction dataset should contain exactly one window, found instead \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(dataset)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    282\u001b[39m \u001b[38;5;66;03m# Get the last window for prediction\u001b[39;00m\n\u001b[32m    283\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(dataset) == \u001b[32m0\u001b[39m:\n",
+                        "\u001b[31mAssertionError\u001b[39m: Prediction dataset should contain exactly one window, found instead 0"
                     ]
                 }
             ],
@@ -114,11 +110,15 @@
                 "from datetime import datetime, timedelta\n",
                 "from pandas.tseries.frequencies import to_offset\n",
                 "import pandas_market_calendars as market_calendars\n",
+                "import debugpy\n",
+                "from pandas.tseries.frequencies import to_offset\n",
                 "\n",
                 "# Import model and utilities\n",
                 "from models.UMIModel.UMIModel import UMIModel\n",
                 "from algos.engine.data_loader import CsvBarLoader\n",
                 "from models.utils import freq2pdoffset, freq2pdoffset\n",
+                "\n",
+                "\n",
                 "\n",
                 "# %% Load configuration\n",
                 "config_path = Path(\"configs/config.yaml\")\n",
@@ -239,22 +239,22 @@
                 "    mlflow.log_param(\"num_stocks\", len(test_universe))\n",
                 "    mlflow.log_param(\"train_bars\", len(sample_data[test_universe[0]]))\n",
                 "    \n",
-                "    # %% Test prediction\n",
-                "    print(\"\\n=== Testing Prediction ===\")\n",
+                "    # # %% Test prediction\n",
+                "    # print(\"\\n=== Testing Prediction ===\")\n",
                 "    \n",
-                "    # Prepare current data for prediction (use last window)\n",
-                "    current_time = valid_end\n",
-                "    active_mask = torch.ones(len(test_universe), dtype=torch.bool)\n",
+                "    # # Prepare current data for prediction (use last window)\n",
+                "    # current_time = valid_end\n",
+                "    # active_mask = torch.ones(len(test_universe), dtype=torch.bool)\n",
                 "    \n",
-                "    predictions = model.predict(sample_data, current_time, active_mask)\n",
+                "    # predictions = model.predict(sample_data, current_time, active_mask)\n",
                 "    \n",
-                "    print(f\"Predictions at {current_time}:\")\n",
-                "    for ticker, pred in predictions.items():\n",
-                "        print(f\"  {ticker}: {pred:.6f}\")\n",
+                "    # print(f\"Predictions at {current_time}:\")\n",
+                "    # for ticker, pred in predictions.items():\n",
+                "    #     print(f\"  {ticker}: {pred:.6f}\")\n",
                 "    \n",
-                "    # Log predictions\n",
-                "    for ticker, pred in predictions.items():\n",
-                "        mlflow.log_metric(f\"pred_{ticker}\", pred)\n",
+                "    # # Log predictions\n",
+                "    # for ticker, pred in predictions.items():\n",
+                "    #     mlflow.log_metric(f\"pred_{ticker}\", pred)\n",
                 "    \n",
                 "    # %% Test walk-forward updates until retrain_offset\n",
                 "    print(\"\\n=== Testing Walk-Forward Updates ===\")\n",
@@ -266,7 +266,7 @@
                 "    print(\"-\" * 60)\n",
                 "    \n",
                 "    # Get update and retrain intervals from config\n",
-                "    from pandas.tseries.frequencies import to_offset\n",
+                "    \n",
                 "    update_freq = to_offset(cfg[\"freq\"]) * cfg[\"pred_len\"]  # Update after each prediction horizon\n",
                 "    retrain_offset = to_offset(cfg[\"training\"][\"retrain_offset\"])\n",
                 "    \n",
@@ -280,7 +280,7 @@
                 "    update_count = 0\n",
                 "    \n",
                 "    # Walk forward until retrain_offset is reached\n",
-                "    while current_time - last_retrain_time < retrain_offset:\n",
+                "    while current_time  < retrain_offset + last_retrain_time:\n",
                 "        # Move forward by prediction horizon\n",
                 "        current_time = current_time + update_freq\n",
                 "        update_count += 1\n",
@@ -298,13 +298,15 @@
                 "        \n",
                 "        # Prepare data up to current time\n",
                 "        current_data = {}\n",
+                "        active_mask = torch.ones(len(sample_data), dtype=torch.bool)\n",
                 "        for ticker in test_universe:\n",
                 "            if ticker in loader._frames:\n",
                 "                df = loader._frames[ticker]\n",
-                "                mask = (df.index >= backtest_start) & (df.index <= current_time)\n",
+                "                mask = (df.index >= current_time - freq2pdoffset(cfg[\"freq\"]) * (cfg[\"window_len\"] + 1 )) & (df.index <= current_time)\n",
                 "                current_data[ticker] = df[mask]\n",
                 "        \n",
                 "        # Make prediction\n",
+                "        # debugger\n",
                 "        predictions = model.predict(current_data, current_time, active_mask)\n",
                 "        \n",
                 "        # Store predictions\n",
