Refactor to Strategy and Model Generalization Start integration with DeepCode

--- a/research.ipynb
+++ b/research.ipynb
@@ -54,9 +54,9 @@
     "from nautilus_trader.model.data import TradeTick\n",
     "\n",
     "# Project modules\n",
-    "from algos.engine.databento_loader import DatabentoTickLoader\n",
-    "from algos.engine.hparam_tuner import OptunaHparamsTuner\n",
-    "from algos.engine.performance_plots import (\n",
+    "from engine.databento_loader import DatabentoTickLoader\n",
+    "from engine.hparam_tuner import OptunaHparamsTuner\n",
+    "from engine.performance_plots import (\n",
     "    get_frequency_params, align_series,\n",
     "    plot_balance_breakdown, plot_cumulative_returns,\n",
     "    plot_rolling_sharpe, plot_underwater,\n",
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Load configuration\n",
-    "cfg_path = Path(\"configs/config.yaml\")\n",
+    "cfg_path = Path(\"configs/model_config.yaml\")\n",
     "cfg = yaml.safe_load(cfg_path.read_text(encoding=\"utf-8\"))\n",
     "\n",
     "# Setup currency\n",
