--- a/research.ipynb
+++ b/research.ipynb
@@ -28,10 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93be3c18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (hparam_tuner.py, line 625)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[36m(most recent call last)\u001b[39m:\n",
+      "  File \u001b[92mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3699\u001b[39m in \u001b[95mrun_code\u001b[39m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[36m  \u001b[39m\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom engine.hparam_tuner import OptunaHparamsTuner\u001b[39m\n",
+      "  \u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gianc\\Desktop\\PYTHON\\sapiens\\engine\\hparam_tuner.py:625\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfor metric_name, metric_value in metrics.items():\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "# Use to debugging\n",
     "%load_ext autoreload\n",
@@ -68,7 +80,8 @@
     "    level=logging.DEBUG,\n",
     "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'\n",
     ")\n",
-    "logger = logging.getLogger(__name__)"
+    "logger = logging.getLogger(__name__)\n",
+    "client = MlflowClient(tracking_uri=\"file:logs/mlflow\")"
    ]
   },
   {
@@ -78,31 +91,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load configuration\n",
-    "cfg_path = Path(\"configs/model_config.yaml\")\n",
-    "cfg = yaml.safe_load(cfg_path.read_text(encoding=\"utf-8\"))\n",
+    "# Load Sapiens configuration\n",
+    "sapiens_cfg_path = Path(\"configs/sapiens_config.yaml\")\n",
+    "sapiens_cfg = yaml.safe_load(sapiens_cfg_path.read_text(encoding=\"utf-8\"))\n",
     "\n",
-    "# Setup currency\n",
-    "currency_code = cfg[\"STRATEGY\"][\"PARAMS\"][\"currency\"]\n",
-    "if currency_code == \"USD\":\n",
-    "    cfg[\"STRATEGY\"][\"PARAMS\"][\"currency\"] = Currency(\n",
-    "        code='USD', precision=3, iso4217=840,\n",
-    "        name='United States dollar', currency_type=CurrencyType.FIAT\n",
-    "    )\n",
-    "elif currency_code == \"EUR\":\n",
-    "    cfg[\"STRATEGY\"][\"PARAMS\"][\"currency\"] = Currency(\n",
-    "        code='EUR', precision=3, iso4217=978,\n",
-    "        name='Euro', currency_type=CurrencyType.FIAT\n",
-    "    )\n",
+    "# Load strategy and model configs\n",
+    "strategy_name = sapiens_cfg[\"SAPIENS_STRATEGY\"]['strategy_name']\n",
+    "strategy_cfg_path = Path(f\"strategies/{strategy_name}/strategy_config.yaml\")\n",
+    "strategy_cfg = yaml.safe_load(strategy_cfg_path.read_text(encoding=\"utf-8\"))[\"STRATEGY\"]\n",
+    "\n",
+    "model_name = sapiens_cfg[\"SAPIENS_MODEL\"]['model_name']\n",
+    "model_cfg_path = Path(f\"models/{model_name}/model_config.yaml\")\n",
+    "model_cfg = yaml.safe_load(model_cfg_path.read_text(encoding=\"utf-8\"))[\"MODEL\"]\n",
+    "\n",
     "\n",
     "# Setup directories\n",
-    "logs_dir = Path(\"logs/\")\n",
+    "logs_dir = Path(sapiens_cfg[\"logs_dir\"])\n",
     "logs_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "print(\"Configuration loaded successfully\")\n",
-    "print(f\"Model: {cfg['MODEL']['PARAMS']['model_name']}\")\n",
-    "print(f\"Strategy: {cfg['STRATEGY']['PARAMS']['strategy_name']}\")\n",
-    "print(f\"Backtest period: {cfg['STRATEGY']['PARAMS']['backtest_start']} to {cfg['STRATEGY']['PARAMS']['backtest_end']}\")\n"
+    "print(f\"Model: {model_cfg['PARAMS']['model_name']}\")\n",
+    "print(f\"Strategy: {strategy_cfg['PARAMS']['strategy_name']}\")\n",
+    "print(f\"Backtest period: {sapiens_cfg['backtest_start']} to {sapiens_cfg['backtest_end']}\")"
    ]
   },
   {
@@ -129,8 +139,8 @@
     "# Initialize loader\n",
     "logger.info(\"Initializing Databento loader...\")\n",
     "loader = DatabentoTickLoader(\n",
-    "    cfg=cfg[\"STRATEGY\"][\"PARAMS\"],\n",
-    "    venue_name=cfg[\"STRATEGY\"][\"PARAMS\"][\"venue_name\"]\n",
+    "    cfg=strategy_cfg[\"PARAMS\"],\n",
+    "    venue_name=strategy_cfg[\"PARAMS\"][\"venue_name\"]\n",
     ")\n",
     "\n",
     "# Determine catalog path\n",
@@ -151,7 +161,7 @@
     "    )\n",
     "\n",
     "# Add catalog path to config\n",
-    "cfg[\"STRATEGY\"][\"PARAMS\"][\"catalog_path\"] = str(catalog_path)\n",
+    "strategy_cfg[\"PARAMS\"][\"catalog_path\"] = str(catalog_path)\n",
     "\n",
     "# Verify catalog\n",
     "#instruments = catalog.instruments(instrument_type=TradeTick)  # takes too long on laptop. Use loader class instruments property instead\n",
@@ -169,15 +179,16 @@
    "source": [
     "# Initialize hyperparameter tuner\n",
     "tuner = OptunaHparamsTuner(\n",
-    "    cfg=cfg,\n",
+    "    sapiens_config=sapiens_cfg,\n",
     "    catalog=catalog,\n",
-    "    run_dir=logs_dir,\n",
-    "    seed=2025\n",
+    "    model_config=model_cfg,\n",
+    "    strategy_config=strategy_cfg,\n",
+    "    run_dir=logs_dir\n",
     ")\n",
     "\n",
     "print(\"Hyperparameter tuner initialized\")\n",
-    "print(f\"Model trials: {cfg['MODEL']['PARAMS']['n_trials']}\")\n",
-    "print(f\"Strategy trials: {cfg['STRATEGY']['PARAMS']['n_trials']}\")"
+    "print(f\"Model trials: {sapiens_cfg['SAPIENS_MODEL']['optimization']['n_trials']}\")\n",
+    "print(f\"Strategy trials: {sapiens_cfg['SAPIENS_STRATEGY']['optimization']['n_trials']}\")"
    ]
   },
   {
@@ -236,7 +247,7 @@
     "logger.info(\"📊 STAGE 3: STRATEGY HYPERPARAMETER OPTIMIZATION\")\n",
     "logger.info(\"=\"*70 + \"\\n\")\n",
     "\n",
-    "model_name = cfg['MODEL']['PARAMS']['model_name']\n",
+    "model_name = model_cfg['PARAMS']['model_name']\n",
     "strategy_results = tuner.optimize_strategy(model_name=model_name)\n",
     "\n",
     "print(\"\\n✅ Strategy optimization complete!\")\n",
@@ -265,12 +276,12 @@
    "outputs": [],
    "source": [
     "# Get optimization context\n",
-    "run = mlflow.get_run(strategy_results[\"mlflow_run_id\"])\n",
+    "run = client.get_run(strategy_results[\"mlflow_run_id\"])\n",
     "optimization_id = run.data.tags.get(\"optimization_id\", \"\")\n",
     "\n",
     "# Define backtest period\n",
-    "backtest_start = cfg[\"STRATEGY\"][\"PARAMS\"][\"backtest_start\"]\n",
-    "backtest_end = cfg[\"STRATEGY\"][\"PARAMS\"][\"backtest_end\"]\n",
+    "backtest_start = sapiens_cfg[\"backtest_start\"]\n",
+    "backtest_end = sapiens_cfg[\"backtest_end\"]\n",
     "\n",
     "print(f\"Running final backtest: {backtest_start} to {backtest_end}\")"
    ]
@@ -319,7 +330,6 @@
    "outputs": [],
    "source": [
     "# Load results from MLflow\n",
-    "client = MlflowClient(tracking_uri=\"file:logs/mlflow\")\n",
     "\n",
     "# Get the most recent backtest run\n",
     "exp = client.get_experiment_by_name(\"Backtests\")\n",
@@ -346,8 +356,8 @@
    "outputs": [],
    "source": [
     "# Load account and positions data\n",
-    "acc_path = client.download_artifacts(run_id=backtest_run_id, path=\"account_report.csv\")\n",
-    "pos_path = client.download_artifacts(run_id=backtest_run_id, path=\"positions_report.csv\")\n",
+    "acc_path = client.download_artifacts(run_id=backtest_run_id, path=\"account_report.json\")\n",
+    "pos_path = client.download_artifacts(run_id=backtest_run_id, path=\"positions_report.json\")\n",
     "\n",
     "account_df = pd.read_csv(acc_path, index_col=0, parse_dates=True)\n",
     "positions_df = pd.read_csv(pos_path, index_col=0, parse_dates=True)\n",
@@ -364,21 +374,25 @@
    "outputs": [],
    "source": [
     "# Calculate returns\n",
-    "freq = cfg['STRATEGY']['PARAMS']['freq']\n",
+    "freq = strategy_cfg['PARAMS']['freq']\n",
     "freq_params = get_frequency_params(freq)\n",
     "\n",
     "# Extract portfolio values\n",
-    "currency_code = cfg['STRATEGY']['PARAMS']['currency'].code\n",
+    "currency_code = strategy_cfg['PARAMS']['currency']\n",
     "portfolio_values = account_df[account_df['currency'] == currency_code]['total']\n",
     "portfolio_values = portfolio_values.resample(freq_params['resample_freq']).last().ffill()\n",
     "strategy_ret = portfolio_values.pct_change().fillna(0)\n",
     "\n",
     "# Load benchmark and risk-free data\n",
-    "data_dict = loader.get_ohlcv_data(frequency=freq)\n",
-    "benchmark_ticker = cfg['STRATEGY']['PARAMS']['benchmark_ticker']\n",
-    "risk_free_ticker = cfg['STRATEGY']['PARAMS']['risk_free_ticker']\n",
-    "benchmark_ret = data_dict[benchmark_ticker]['close'].pct_change()\n",
-    "rf_ret = data_dict[risk_free_ticker]['close'].pct_change()\n",
+    "data_dict = tuner.get_ohlcv_data_from_catalog(\n",
+    "    frequency=freq,\n",
+    "    start=pd.Timestamp(backtest_start),\n",
+    "    end=pd.Timestamp(backtest_end),\n",
+    "    instrument_ids=[strategy_cfg['PARAMS']['benchmark_ticker'],\n",
+    "                    strategy_cfg['PARAMS']['risk_free_ticker']]\n",
+    ")\n",
+    "benchmark_ret = data_dict[strategy_cfg['PARAMS']['benchmark_ticker']]['close'].pct_change()\n",
+    "rf_ret = data_dict[strategy_cfg['PARAMS']['risk_free_ticker']]['close'].pct_change()\n",
     "\n",
     "# Align series\n",
     "strategy_ret, benchmark_ret, rf_ret = align_series(\n",
@@ -510,10 +524,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "fig = plot_portfolio_allocation(\n",
     "    positions_df=positions_df,\n",
     "    resample_freq=freq_params['resample_freq']\n",
-    ")"
+    ")\n",
+    "\"\"\""
    ]
   },
   {
